--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
     "browser-sync": "^2.18.13",
     "del": "^3.0.0",
     "gulp": "^3.9.1",
@@ -33,6 +36,7 @@
     "postcss-import": "^10.0.0",
     "postcss-mixins": "^6.0.1",
     "postcss-nested": "^2.1.0",
-    "postcss-simple-vars": "^4.0.0"
+    "postcss-simple-vars": "^4.0.0",
+    "webpack": "^3.7.1"
   }
 }
