Completed the reveal on scroll behavior

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postcss-mixins": "^6.0.1",
     "postcss-nested": "^2.1.0",
     "postcss-simple-vars": "^4.0.0",
+    "waypoints": "^4.0.1",
     "webpack": "^3.7.1"
   }
 }
