--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-rename": "^1.2.2",
     "gulp-svg-sprite": "1.3.1",
     "gulp-watch": "^4.3.11",
+    "jquery-smooth-scroll": "^2.2.0",
     "postcss-hexrgba": "^1.0.0",
     "postcss-import": "^10.0.0",
     "postcss-mixins": "^6.0.1",
