--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-svg-sprite": "1.3.1",
     "gulp-watch": "^4.3.11",
     "jquery-smooth-scroll": "^2.2.0",
+    "lazysizes": "^4.0.0",
     "postcss-hexrgba": "^1.0.0",
     "postcss-import": "^10.0.0",
     "postcss-mixins": "^6.0.1",
